--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,12 +31,19 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
   dart_numerics: ^0.0.6
-  go_router: ^7.1.1
+  dio: ^5.2.1+1
+  flutter_bloc: ^8.1.3
+  flutter_spinkit: ^5.2.0
+  freezed_annotation: ^2.2.0
+  get_it: ^7.6.0
+  go_router: ^8.0.3
+  intl: ^0.18.1
+  json_annotation: ^4.8.1
+  logger: ^1.4.0
+
 
 dev_dependencies:
   flutter_test:
@@ -47,7 +54,10 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  build_runner: ^2.4.5
+  flutter_lints: ^2.0.1
+  freezed: ^2.3.5
+  json_serializable: ^6.7.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -76,16 +86,16 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: SanSerif
+      fonts:
+        - asset: assets\fonts\SANSSERIF.TTF
+
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
+  #         style: italic
   #         weight: 700
   #
   # For details regarding fonts from package dependencies,
